<resources>
    <string name="app_name">Online Study</string>
    <string name="username">Username</string>
    <string name="user_name">Username</string>
    <string name="login">SIGN IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="auth_failed">
Authentication failed, check your email and password or sign up
</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>

    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">
        We just need your registered Email Id to sent you password reset instructions.
    </string>
    <string name="action_sign_in_short">Register</string>
    <string name="error_player">There was an error initializing the YouTubePlayer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dash Board</string>
    <string name="title_notifications">Notification</string>
    <string name="userInfo">User info</string>
    <string name="log_out">Log out</string>
    <string name="register">Register</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="profile">Profile</string>
    <string name="gallery">Gallery</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_course">My Course</string>
</resources>
