<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.baobang.gameduangua.profile.ProfileActivity"
    android:id="@+id/container">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        android:layout_marginTop="@dimen/margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:textSize="@dimen/text_size"/>

    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilFullName"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginStart="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="@dimen/text_size"
            android:layout_marginEnd="@dimen/margin"/>

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="@string/male"
            android:checked="true"
            android:layout_marginEnd="@dimen/margin"/>

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="@string/female"
            android:checked="false"/>

    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilBirthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgGender"
        android:layout_marginTop="@dimen/margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtDateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:hint="@string/date_of_birth"
            android:inputType="date"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilBirthday"
        android:layout_marginTop="@dimen/margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:hint="@string/email"
            android:enabled="false"/>

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/btnCancel"
        android:layout_marginTop="@dimen/margin"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        app:layout_constraintLeft_toLeftOf="@id/btnUpdate"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin"/>

</android.support.constraint.ConstraintLayout>
